<?xml version="1.0" encoding="UTF-8"?>
<!--
/*
 * Note portions of this file are copied from SpareParts Part
 * of the Android Open Source Project
 *
 * Copyright 2011, Terrence Ezrol (ezGingerbread Project)
 * Copyright 2008, The Android Open Source Project
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
-->
<resources>
    <string name="app_name">EzGingerbread Extras</string>
    <string name="displayparts">Display Adv. Parts:</string>
    <string name="spareparts">Spare Parts:</string>

    <!--Begin Spare Parts strings-->
     <string name="title_window_animations">Window animations</string>
    <string name="summary_window_animations">Speed of animations in individual windows</string>
    <string name="dialog_title_window_animations">Select window speed</string>

    <string name="title_transition_animations">Transition animations</string>
    <string name="summary_transition_animations">Speed of animations moving between screens</string>
    <string name="dialog_title_transition_animations">Select transition speed</string>

    <string name="title_fancy_ime_animations">Fancy input animations</string>
    <string name="summary_on_fancy_ime_animations">Use fancier animations for input method windows</string>
    <string name="summary_off_fancy_ime_animations">Use normal animations for input method windows</string>

    <string name="title_haptic_feedback">Haptic feedback</string>
    <string name="summary_on_haptic_feedback">Use haptic feedback with user interaction</string>
    <string name="summary_off_haptic_feedback">Use haptic feedback with user interaction</string>

    <string name="title_end_button">End button behavior</string>
    <string name="summary_end_button">Select End (red) button action</string>
    <string name="dialog_title_end_button">Select End button</string>

    <string name="applications_title">Applications</string>

    <!-- Sound & display settings screen, compatibility mode check box label -->
    <string name="compatibility_mode_title">Compatibility Mode</string>
    <!-- Sound & display settings screen, compatibility mode option summary text when check box is selected -->
    <string name="compatibility_mode_summary_on">Run older apps in Compatibility mode. This require rebooting. </string>
    <!-- Sound & display settings screen, compatibility mode option summary text when check box is clear -->
    <string name="compatibility_mode_summary_off">Run older apps in Compatibility mode. This require rebooting. </string>

    <!-- End Spare Parts Strings-->

    <!--Strings for PowerWidgets-->
    <string name="general_title">General</string>

    <!-- Expanded View Power Widget -->
    <string name="title_widget_buttons">Expanded View Widget</string>
    <string name="title_expanded_widget">Configure PowerWidget</string>
    <string name="summary_expanded_widget">Configure the expanded views power widget</string>
    <string name="title_expanded_hide_onchange">Hide on change</string>
    <string name="summary_expanded_hide_onchange">Hide the notification pulldown after toggling a widget button</string>
    <string name="title_expanded_hide_scrollbar">Hide scrollbar</string>
    <string name="summary_expanded_hide_scrollbar">Hide scrollbar when more than the maximum number of widget buttons are present.</string>
    <string name="expanded_color_mask">Indicator color</string>
    <string name="title_widget_picker">Widget buttons</string>
    <string name="summary_widget_picker">Pick your widget buttons</string>
    <string name="title_widget_order">Widget button order</string>
    <string name="summary_widget_order">Order your widget buttons</string>
    <string name="title_buttons">Buttons</string>
    <string name="title_toggle_wifi">Toggle Wifi</string>
    <string name="title_toggle_bluetooth">Toggle Bluetooth</string>
    <string name="title_toggle_gps">Toggle GPS</string>
    <string name="title_toggle_sound">Toggle Sound</string>
    <string name="title_toggle_brightness">Toggle Brightness</string>
    <string name="title_toggle_sync">Toggle Sync</string>
    <string name="title_toggle_wifiap">Toggle Wifi AP</string>
    <string name="title_toggle_screentimeout">Toggle Screentimeout</string>
    <string name="title_toggle_mobiledata">Toggle Mobiledata</string>
    <string name="title_toggle_lockscreen">Toggle Lockscreen</string>
    <string name="title_toggle_networkmode">Toggle 2G/3G</string>
    <string name="title_toggle_autorotate">Toggle Orientation</string>
    <string name="title_toggle_airplane">Toggle Airplane mode</string>
    <string name="title_toggle_flashlight">Toggle LED flashlight</string>
    <string name="title_toggle_sleep">Go to sleep</string>
    <string name="title_toggle_media_play_pause">Media: Toggle Play/Pause</string>
    <string name="title_toggle_media_previous">Media: Skip to Previous</string>
    <string name="title_toggle_media_next">Media: Skip to Next</string>
    <string name="title_toggle_wimax">Toggle WiMAX</string>
    <string name="title_button_modes">Button modes</string>
    <string name="pref_brightness_mode_title">Brightness modes</string>
    <string name="pref_brightness_mode_summary">Choose how the brightness button changes modes</string>
    <string name="pref_network_mode_title">Network modes</string>
    <string name="pref_network_mode_summary">Choose how the NetworkMode button changes modes</string>
    <string name="pref_screentimeout_mode_title">Screentimeout modes</string>
    <string name="pref_screentimeout_mode_summary">Choose how the Screentimeout button changes modes</string>
    <string name="pref_ring_mode_title">Sound modes</string>
    <string name="pref_ring_mode_summary">Choose how the sound button changes modes</string>
    <string name="pref_flash_mode_title">Flash mode</string>
    <string name="pref_flash_mode_summary">Choose High / Death Ray (Evo)</string>
    <!--End Power Widgets-->
    <!-- performance settings -->
    <string name="perfctl_title">Performance Settings:</string>
    <string name="dialog_compcache_memctl_state">Compcache (zRam)</string>
    <string name="title_compcache_size">Compcache RAM Usage</string>
    <string name="summary_compcache_size">Compressed ram for increased virtual ram</string>
    <string name="title_ksmenable_toggle">Use KSM Module</string>
    <string name="summary_ksmenable_toggle">Kernel SamePage Merging to save true ram</string>
    <string name="summaryon_ksmenable_toggle">Kernel SamePage Merging to save true ram</string>
    <string name="userntpd_title">Busybox NTP Client</string>
    <string name="userntpd_summary">Run Busybox NTP Client for time correction</string>
    <string name="call_touchui_title">Incoming Call TouchUI</string>
    <string name="call_touchui_summary">Enable TouchUI to answer incoming calls</string>
    <string name="toast_reboot_required">The change will be applied on your next reboot.</string>
    <!-- cpuspeed (cpu freq) settings -->
    <string name="cpufreq_header">CPU Speed:</string>
    <string name="enable_cpufreq_title">CPU Speed Enabled</string>
    <string name="cpufreq_menu">CPU Speeds</string>
    <string name="summary_cpufreq_menu">Set CPU min/max speeds</string>
    <string name="enable_cpufreq_summary">Automatic CPU Speed Adjustments enabled; disable before using third party apps for maintaining CPU speed</string>
    <string name="reset_cpufreq_title">Reset CPU Settings</string>
    <string name="reset_cpufreq_summary">Enable default CPU Speed settings based on kernel default speeds on next reboot</string>
    <string name="cpufreq_current">Current CPU Speed:</string>
    <string name="cpufreq_maxwake">CPU Max (screen on)</string>
    <string name="cpufreq_maxsleep">CPU Max (screen off)</string>
    <string name="cpufreq_min">CPU Min Speed</string>
    <string name="cpufreq_boot">Boot CPU Speed:</string>
    <string name="cpufreq_boot_info_title">Settings on boot</string>
    <string name="cpufreq_boot_title_max">Max (screen on/off): </string>
    <string name="cpufreq_boot_title_min">Min (idle): </string>
    <string name="cpufreq_boot_title_default">Kernel default will be applied</string>
    <string name="cpufreq_setboot_title">Apply On Boot</string>
    <string name="cpufreq_setboot_summary">Apply current settings on next system boot</string>
    <string name="cpufreq_notice_title">Notice after boot:</string>
    <string name="cpufreq_notice_summary">CPU Speed is not applied until after the screen is allowed to turn off</string>
</resources>
