<?xml version="1.0" encoding="UTF-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

	<!-- Expanded View Power Widget -->
	<PreferenceCategory android:title="@string/general_title">
		<PreferenceScreen android:key="widget_picker"
			android:title="@string/title_widget_picker" android:summary="@string/summary_widget_picker">
			<intent android:action="android.intent.action.MAIN"
				android:targetPackage="com.android.settings"
				android:targetClass="com.android.settings.activities.PowerWidgetActivity" />
		</PreferenceScreen>
		<PreferenceScreen android:key="widget_order"
			android:title="@string/title_widget_order" android:summary="@string/summary_widget_order">
			<intent android:action="android.intent.action.MAIN"
				android:targetPackage="com.android.settings"
				android:targetClass="com.android.settings.activities.PowerWidgetOrderActivity" />
		</PreferenceScreen>
	</PreferenceCategory>

</PreferenceScreen>
